AP-18197: Improve code documentation